hphp/hack/test/typecheck/misspell_dict.php.exp
File "misspell_dict.php", line 4, characters 8-11:
Unbound name: Dict (an object type) (Naming[2049])
